--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "trello-api-sandbox",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "node seed/index.js"
   },
   "dependencies": {
+    "mongoose": "^7.0.1",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
