--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "seed": "node seed/index.js"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.9",
+    "daisyui": "^2.51.3",
     "mongoose": "^7.0.1",
     "next": "13.2.4",
     "react": "18.2.0",
